Fixed: Broken layout when the number of grids is more than one for mobile

--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -22,7 +22,9 @@ body.home #main, #main.home {
   }
 
   @media screen and (max-width: $bpmax-mobile) {
-    flex-flow: column wrap;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-flow: row wrap;
     padding: 2em 20px 0;
     .post, .page {
       width: 100%;
